--- a/dfs/index.html
+++ b/dfs/index.html
@@ -10,10 +10,10 @@
       <button id="play">
         <icon>▶</icon>
       </button>
-      <button id="reset">
+      <button id="reset" hidden>
         <icon>↻</icon>
       </button>
-      <button>
+      <button id="shuffle">
         <icon>🔀</icon>
       </button>
     </div>
