--- a/BFS/index.html
+++ b/BFS/index.html
@@ -4,7 +4,7 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <h1>DFS</h1>
+    <h1>BFS</h1>
 
     <div class="container" id="graph">
 
