--- a/Grid/BFS/index.html
+++ b/Grid/BFS/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <script src="index.js"></script>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <script src="./index.js"></script>
   </head>
   <body>
     <h1>BFS</h1>
