--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <ul>
           <li><a href="./Grid/DFS/">DFS</a></li>
           <li><a href="./Grid/BFS/">BFS</a></li>
+          <li><a href="./Grid/FloodFill/">FloodFill</a></li>
       </ul>
     </div>
 </body>
