--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       <ul>
           <li><a href="./Grid/DFS/">DFS</a></li>
           <li><a href="./Grid/BFS/">BFS</a></li>
-          <li><a href="./Grid/FloodFill/">FloodFill</a></li>
+          <li><a href="./Grid/FloodFill/">Flood Fill</a></li>
+          <li><a href="./Grid/RottenTomatoes/">Rotten Tomatoes</a></li>
       </ul>
     </div>
 </body>
