number of islands

--- a/Grid/NumberOfIslands/index.html
+++ b/Grid/NumberOfIslands/index.html
@@ -4,9 +4,10 @@
     <script src="./index.js"></script>
   </head>
   <body>
-    <h1>Click to Fill-in</h1>
+    <h1>Number Of Islands</h1>
 
     <div class="container">
+      <h2 id="count">Count : 0</h2>
       <div id="graph">
       </div>
     </div>
