--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <li><a href="./Grid/BFS/">BFS</a></li>
           <li><a href="./Grid/FloodFill/">Flood Fill</a></li>
           <li><a href="./Grid/RottenTomatoes/">Rotten Tomatoes</a></li>
+          <li><a href="./Grid/NumberOfIslands/">Number Of Islands</a></li>
       </ul>
     </div>
 </body>
