--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <li><a href="./Grid/FloodFill/">Flood Fill</a></li>
           <li><a href="./Grid/RottenTomatoes/">Rotten Tomatoes</a></li>
           <li><a href="./Grid/NumberOfIslands/">Number Of Islands</a></li>
+          <li><a href="./Grid/BiggestIsland/">Biggest Island</a></li>
       </ul>
     </div>
 </body>
