--- a/Grid/PacificAtlantic/index.html
+++ b/Grid/PacificAtlantic/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div class="vertical">
-      <h1>Can water flow to both pacific and Atlantic?</h1>
+      <h1>Can water flow to both Pacific and Atlantic?</h1>
   
       <div class="content">
         <div class="label">pacific</div>
