--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <li><a href="./Grid/RottenTomatoes/">Rotten Tomatoes</a></li>
           <li><a href="./Grid/NumberOfIslands/">Number Of Islands</a></li>
           <li><a href="./Grid/BiggestIsland/">Biggest Island</a></li>
+          <li><a href="./Grid/PacificAtlantic/">Pacific & Atlantic</a></li>
       </ul>
     </div>
 </body>
