--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <li><a href="./Grid/NumberOfIslands/">Number Of Islands</a></li>
           <li><a href="./Grid/BiggestIsland/">Biggest Island</a></li>
           <li><a href="./Grid/PacificAtlantic/">Pacific & Atlantic</a></li>
+          <li><a href="./Grid/NearestExit/">Nearest Exit</a></li>
       </ul>
     </div>
 </body>
